k8s/apps/solidtime/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solidtime
  annotations:
    operator.1password.io/auto-restart: "true"
