k8s/apps/solidtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidtime-svc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: solidtime
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
